Fixed collapse animation

--- a/src/server/HSMServer/wwwroot/src/css/site.css
+++ b/src/server/HSMServer/wwwroot/src/css/site.css
@@ -159,3 +159,9 @@ input.input-validation-error {
     text-decoration: underline;
     text-underline-offset: 0.3rem;
 }
+
+.no-transition {
+    transition: none!important;
+    -webkit-transition: none!important;
+    display: none;
+}
